MODBULKOPS-65 - TD - BulkOps: handling CSV <-> Object exceptions (#102)
* MODBULKOPS-65 - Errors handling (entities equality fixing)

* MODBULKOPS-65 - Errors handling (entities equality fixing)

* MODBULKOPS-65 - Errors handling (entities equality fixing)